--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <meta name="keywords" content="Roda das Emoções de Plutchik, emoções, psicoeducação emocional, regulação emocional, registro clínico de emoções, psicologia, terapia, TCC, DBT">
     <meta name="author" content="Thaís Campos, Psicóloga Clínica">
     <!-- URL real no GitHub Pages -->
-    <link rel="canonical" href="https://ricmurtapsicologia.github.io/emocao360/">
+    <link rel="canonical" href="https://https://thaispsicologa.github.io/emocao360/">
     <!-- Favicon (clínico / circular) -->
     <link rel="icon" type="image/jpeg" href="https://i.pinimg.com/736x/87/94/80/879480aee2bbe6a01efd0cd848c456ff.jpg">
     <!-- Open Graph / WhatsApp -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Roda das Emoções de Plutchik – Psicoeducação Emocional">
     <meta property="og:description" content="Clique na emoção, leia a explicação, registre o contexto e gere um resumo clínico. Psicoeducação emocional baseada na Roda das Emoções de Plutchik.">
-    <meta property="og:url" content="https://ricmurtapsicologia.github.io/emocao360/">
+    <meta property="og:url" content="https://https://thaispsicologa.github.io/emocao360/">
     <meta property="og:image" content="https://i.pinimg.com/736x/87/94/80/879480aee2bbe6a01efd0cd848c456ff.jpg">
     <meta property="og:locale" content="pt_BR">
     <!-- Twitter Card -->
