--- a/index.html
+++ b/index.html
@@ -3041,7 +3041,7 @@
                 "Ela ajuda a entender melhor o que você sente, com explicações simples, e permite registrar contexto, gatilhos e reações para levar à terapia.",
                 "",
                 "Acesse aqui:",
-                "https://ricmurtapsicologia.github.io/emocao360/",
+                "https:// https://thaispsicologa.github.io/emocao360/",
                 "",
                 "Lembrete: não substitui atendimento de emergência nem psicoterapia, mas pode complementar o cuidado profissional."
             ];
